--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,6 @@ workflows:
   use-my-orb:
     jobs:
       - cypress/run:
-          cypress-command: npx cypress run --parallel --record
-          parallelism: 3
-          start-command: npm run start
+          cypress-command: npx cypress run --browser chrome
+          install-browsers: true
+          start-command: 'npm run start:dev'
