--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,12 @@
-version: '2.1'
+version: 2.1
 orbs:
-  node: circleci/node@18.15.0
+  # "cypress-io/cypress@3" installs the latest published
+  # version "s.x.y" of the orb. We recommend you then use
+  # the strict explicit version "cypress-io/cypress@3.x.y"
+  # to lock the version and prevent unexpected CI changes
+  cypress: cypress-io/cypress@3
 workflows:
-  matrix-tests:
+  build:
     jobs:
-      - node/test:
-          matrix:
-            parameters:
-              version:
-                - 13.11.0
-                - 12.16.0
-                - 10.19.0
+      - cypress/run # "run" job comes from "cypress" orb
+          start-command: 'npm run start'
