--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,30 @@
-version: 2.1
-orbs:
-  # "cypress-io/cypress@3" installs the latest published
-  # version "s.x.y" of the orb. We recommend you then use
-  # the strict explicit version "cypress-io/cypress@3.x.y"
-  # to lock the version and prevent unexpected CI changes
-  cypress: cypress-io/cypress@3
-workflows:
+version: 2.1  # verzia konfiguračného súboru
+
+jobs:
   build:
+    docker:  # definujeme obraz Dockeru
+      - image: circleci/node:14  # použijeme obraz Node.js verzie 14
+
+    
+
+    steps:  # kroky, ktoré sa majú vykonať v jobe
+      - checkout  # stiahnutie kódu z repozitára
+      - restore_cache:  # obnova cache pre npm balíčky
+          keys:
+            - v1-dependencies-{{ checksum "package-lock.json" }}
+            # Ak sa nezmenil package-lock.json, použijeme uloženú cache
+
+      - run: npm install  # inštalácia npm balíčkov
+
+      - save_cache:  # uloženie cache pre npm balíčky
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package-lock.json" }}
+
+      - run: npm test  # spustenie testov
+
+workflows:
+  version: 2  # verzia workflowu
+  build_and_test:  # názov workflowu
     jobs:
-      - cypress/run # "run" job comes from "cypress" orb:
-          start-command: 'npm run start'
+      - build  # spustenie jobu 'build'
