--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,6 @@ jobs:
     docker:  # definujeme obraz Dockeru
       - image: circleci/node:14  # použijeme obraz Node.js verzie 14
 
-    
     parallelism: 3
     steps:  # kroky, ktoré sa majú vykonať v jobe
       - checkout  # stiahnutie kódu z repozitára
@@ -13,15 +12,17 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "package-lock.json" }}
             # Ak sa nezmenil package-lock.json, použijeme uloženú cache
-
       - run: npm install  # inštalácia npm balíčkov
+      - run: npm test  # spustenie testov
+      - run:
+          name: Spustenie Cypress testov
+          command: npx cypress run --record --key c64c4463-2120-476e-a8fd-f2da8db1b592
+          # spustenie Cypress testov s nahrávaním výsledkov
 
       - save_cache:  # uloženie cache pre npm balíčky
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
-
-      - run: npm test  # spustenie testov
 
 workflows:
   version: 2  # verzia workflowu
