--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,11 @@
-
-version: 2.1  # verzia konfiguračného súboru
-
-jobs:
-  build:
-    docker:  # definujeme obraz Dockeru
-      - image: circleci/node:14  # použijeme obraz Node.js verzie 14
-
-    
-    parallelism: 3
-    steps:  # kroky, ktoré sa majú vykonať v jobe
-      - checkout  # stiahnutie kódu z repozitára
-      - restore_cache:  # obnova cache pre npm balíčky
-          keys:
-            - v1-dependencies-{{ checksum "package-lock.json" }}
-            # Ak sa nezmenil package-lock.json, použijeme uloženú cache
-
-      - run: npm install  # inštalácia npm balíčkov
-
-      - save_cache:  # uloženie cache pre npm balíčky
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package-lock.json" }}
-
-      - run: npm test --SKVZ_CI --record --key c64c4463-2120-476e-a8fd-f2da8db1b592  # spustenie testov s nahrávaním výsledkov do cloudu
-
+version: 2.1
+orbs:
+  cypress: cypress-io/cypress@3
 workflows:
-  version: 2  # verzia workflowu
-  build_and_test:  # názov workflowu
+  build:
     jobs:
-      - build  # spustenie jobu 'build'
+      - cypress/run:
+          start-command: 'npm run start'
+          cypress-command:
+            'npx cypress run --parallel --record --group all tests'
+          parallelism: 4
