--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,5 @@ workflows:
       - cypress/run:
           start-command: 'npm run start'
           cypress-command:
-            'npx cypress run --parallel --record --group all tests'
+            'npx cypress run --parallel --record c64c4463-2120-476e-a8fd-f2da8db1b592 --group all tests'
           parallelism: 4
