--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
 
-      - run: $(npm bin)/cypress run --record --key c64c4463-2120-476e-a8fd-f2da8db1b592  # spustenie testov s nahrávaním výsledkov do cloudu
+-run: npx cypress run --record --key c64c4463-2120-476e-a8fd-f2da8db1b592
 
 workflows:
   version: 2  # verzia workflowu
