--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,14 +14,14 @@ jobs:
             - v1-dependencies-{{ checksum "package-lock.json" }}
             # Ak sa nezmenil package-lock.json, použijeme uloženú cache
 
-      - run: npm install cypress  # inštalácia Cypress
+      - run: npm install  # inštalácia npm balíčkov
 
       - save_cache:  # uloženie cache pre npm balíčky
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
 
-          -run: npx cypress run --record --key c64c4463-2120-476e-a8fd-f2da8db1b592
+      - run: npm test --record --key c64c4463-2120-476e-a8fd-f2da8db1b592  # spustenie testov s nahrávaním výsledkov do cloudu
 
 workflows:
   version: 2  # verzia workflowu
