--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "cypress-parallel": "^0.12.0"
   }
   ,"scripts": {
-    "test": "skvz.cy.js"
+    "test": "cypress run --config-file cypress/cypress.json"
   }
   
 
