--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,14 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
 
+      - run:
+          name: Set file permissions
+          command: icacls cypress /grant Everyone:(R)
+
       - run: npm test --record --key c64c4463-2120-476e-a8fd-f2da8db1b592  # spustenie testov s nahrávaním výsledkov do cloudu
 
 workflows:
   version: 2  # verzia workflowu
   build_and_test:  # názov workflowu
     jobs:
-      - build  # spustenie jobu 'build'
+      - build  # spustenie jobu 'build'  
