--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,10 @@
-version: 2.1  # verzia konfiguračného súboru
-
-jobs:
-  build:
-    docker:  # definujeme obraz Dockeru
-      - image: circleci/node:14  # použijeme obraz Node.js verzie 14
-
-    
-    parallelism: 3
-    steps:  # kroky, ktoré sa majú vykonať v jobe
-      - checkout  # stiahnutie kódu z repozitára
-      - restore_cache:  # obnova cache pre npm balíčky
-          keys:
-            - v1-dependencies-{{ checksum "package-lock.json" }}
-            # Ak sa nezmenil package-lock.json, použijeme uloženú cache
-
-      - run: npm install cypress --save-dev  # inštalácia npm balíčkov
-
-      - save_cache:  # uloženie cache pre npm balíčky
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package-lock.json" }}
-
-      - run:
-          name: Set file permissions
-          command: chmod -R 755 cypress
-
-      - run: npm test --record --key 410d63899d77360a3f06d1f666fdb133dbb2f85f  # spustenie testov s nahrávaním výsledkov do cloudu
-
+version: '2.1'
+orbs:
+  cypress: cypress-io/cypress@3
 workflows:
-  version: 2  # verzia workflowu
-  build_and_test:  # názov workflowu
+  use-my-orb:
     jobs:
-      - build  # spustenie jobu 'build'  
+      - cypress/run:
+          cypress-command: npx cypress run --parallel --record
+          parallelism: 3
+          start-command: npm run start
