--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,6 @@ workflows:
   use-my-orb:
     jobs:
       - cypress/run:
-          cypress-command: npx cypress run --parallel --record
+          cypress-command: npx cypress run --parallel --record --key c64c4463-2120-476e-a8fd-f2da8db1b592
           parallelism: 3
           start-command: npm run start
