--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
    "scripts": {
   "test": "cypress run",
-  "merge:reports": "mochawesome-merge cypress/reports/*.json > cypress/reports/merged-report.json",
-  "generate:report": "marge cypress/reports/merged-report.json --reportDir cypress/reports --reportFilename report.html",
+  "merge:reports": "npx mochawesome-merge e2e/reports/*.json > e2e/reports/merged-report.json",
+  "generate:report": "npx marge e2e/reports/merged-report.json --reportDir e2e/reports --reportFilename report.html",
   "report": "npm run test && npm run merge:reports && npm run generate:report"
 }
+
 }
 
