--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "cypress run",
-    "merge:reports": "npx mochawesome-merge e2e/reports/*.json > e2e/reports/merged-report.json",
+    "merge:reports": "npx mochawesome-merge e2e/reports/*.json > e2e/merged-report.json",
     "generate:report": "npx marge e2e/reports/merged-report.json --reportDir e2e/reports --reportFilename report.html",
     "report": "npm run test && npm run merge:reports && npm run generate:report"
   }
