--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "test": "cypress run",
-    "merge:reports": "npx mochawesome-merge /reports/*.json > cypress/reports/merged-report.json",
-    "generate:report": "npx marge /reports/merged-report.json --reportDir cypress/reports --reportFilename report.html",
+    "merge:reports": "npx mochawesome-merge cypress/reports/*.json > cypress/reports/merged-report.json",
+    "generate:report": "npx marge cypress/reports/merged-report.json --reportDir cypress/reports --reportFilename report.html",
     "report": "npm run test && npm run merge:reports && npm run generate:report"
   }
 }
