--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "cypress run",
-    "merge:reports": "npx mochawesome-merge cypress/reports/*.json > cypress/reports/merged-report.json",
+    "merge:reports": "npx mochawesome-merge cypress/reports/!(merged-report).json > cypress/reports/merged-report.json",
     "generate:report": "npx marge cypress/reports/merged-report.json --reportDir cypress/reports --reportFilename report.html",
     "report": "npm run test && npm run merge:reports && npm run generate:report"
   }
