--- a/.github/cypress.yml
+++ b/.github/cypress.yml
@@ -18,7 +18,8 @@ jobs:
         run: npm ci
 
       - name: Run Cypress and generate report
-        run: npm run report || true
+        run: npm run report 
+        ontinue-on-error: true
 
       - name: Generate report date
         id: report_date
